--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
+<audio autoplay>
+    <source src = "https://youtube.com/shorts/B9_vLL6RQe4?si=akNLZ9UuxtjNu04" type="audio">
         <span>J</span>
         <span>O</span>
         <span>W</span>
@@ -24,7 +26,7 @@
         <button>
             <a href="flower.html">Klik disini</a>
         </button>
-        
+    </audio>
     </div>
 </body>
 </html>
