--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <body>
     <div class="greetings">
     <!-- silahkan menambah kata sesuai keinginan dengan <span>text...</span -->
-<audio autoplay>
-    <source src = "https://youtube.com/shorts/B9_vLL6RQe4?si=akNLZ9UuxtjNu04" type="audio">
+<audio autoplay loop>
+    <source src = "i should've bought you flowers.mp3" type="audio/mp3">
         <span>J</span>
         <span>O</span>
         <span>W</span>
